k3s/base/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: min44-back
  namespace: min44
spec:
  ports:
  - name: http
    targetPort: 5000
    port: 80
  selector:
    app: min44-back
